REGRESSION(309315@main): [WPE][GTK] position:fixed layers are unnecessarily repainted by scrolling https://bugs.webkit.org/show_bug.cgi?id=321908

Reviewed by Carlos Garcia Campos.

After 309315@main stopped rounding the scroll position of layers,
viewport-constrained layers are unnecessarily repainted while scrolling.

LocalFrameView::updateLayoutViewport has this condition:

>    if (newLayoutViewportOrigin != m_layoutViewportOrigin) {
>        setBaseLayoutViewportOrigin(newLayoutViewportOrigin);

m_layoutViewportOrigin of LocalFrameView is a LayoutPoint, but
newLayoutViewportOrigin comes from ScrollView::m_scrollPosition, which is
an IntPoint and thus already rounded. As a result, whenever the scroll
position had a fractional part, this condition was true and triggered an
unnecessary layout.

309315@main solved a problem of accumulated rounding error for touch gesture
scrolling <https://webkit.org/b/309252>. This can be solved in UI process.
Reverted 309315@main, and rounded the touch event positions to calculate
deltas.

* Source/WebCore/page/scrolling/coordinated/ScrollingTreeScrollingNodeDelegateCoordinated.cpp:
(WebCore::ScrollingTreeScrollingNodeDelegateCoordinated::adjustedScrollPosition const): Deleted.
* Source/WebCore/page/scrolling/coordinated/ScrollingTreeScrollingNodeDelegateCoordinated.h:
* Source/WebKit/WPEPlatform/wpe/WPEGestureDetector.cpp:
(WPE::GestureDetector::handleEvent):
* Source/WebKit/UIProcess/API/gtk/WebKitWebViewBase.cpp:
(webkitWebViewBaseTouchDragUpdate):

Canonical link: https://commits.webkit.org/320147@main